<?xml version="1.0"?>
<package format="3">
  <name>bw_ros_driver</name>
  <version>2.0.0</version>
  <description>BW IMU driver (serial + SocketCAN) for ROS 2 Humble.</description>

  <maintainer email="zhangzihao@bwsensing.com">zzh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
